--- a/atividade_Node6/package.json
+++ b/atividade_Node6/package.json
@@ -12,7 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
-        "handlebars": "^4.7.8",
+        "express-handlebars": "^7.1.2",
         "nodemon": "^3.0.1"
     }
 }
